# healthfinder

./: .gitignore  Docker-Tutorial.md  README.md  main.py  package-lock.json  pyproject.toml
docs/: Architecture-Refactor-Design.md  Comprehensive-Provider-API.md  NPPES-Integration.md
frontend/: .env.local.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/components/providers/: ProviderCard.tsx  SkeletonCard.tsx
frontend/docs/: DESIGN.md
frontend/pages/: index.tsx
frontend/pages/providers/: [id].tsx  search.tsx
server/: .env.example  pytest.ini  requirements-test.txt
server/app/: __init__.py  main.py
server/app/agents/: __init__.py  agents_refactored.py  workflow_refactored.py
server/app/agents/function_agents/: __init__.py  base_agent.py  research_agent.py  synthesis_agent.py  web_search_agent.py
server/app/agents/models/: __init__.py  chat_models.py
server/app/agents/tools/: __init__.py  research_tools.py  web_search_tool.py
server/app/agents/workflows/: __init__.py  base_workflow.py  concierge_workflow.py
server/app/api/: __init__.py  auth.py  biomcp.py  chat.py  nppes.py  providers.py
server/app/clients/: betterdoctor.py  nppes.py  practo.py
server/app/core/: __init__.py  config.py  db.py
server/app/models/: __init__.py  providers.py
server/tests/: __init__.py  conftest.py
server/tests/agents/: __init__.py
server/tests/api/: README.md  __init__.py  test_agent_tools.py  test_chat.py  test_main.py  test_nppes.py  test_providers.py  test_workflow_integration.py
server/tests/models/: test_providers.py
