[project]
name = "healthfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# Runtime dependencies for the FastAPI backend
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "databases[sqlite]>=0.9.0",
    "asyncpg>=0.29.0",            # Postgres driver (optional runtime)
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",     # password hashing (future-proof)
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "bcrypt>=4.1.3",
    "biomcp>=0.5.0",              # BioMCP SDK integration
    "llama-index>=0.10.35",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "coverage>=7.5.3",
]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "pre-commit>=3.7.0",
]
